Fix hamburger on mobiles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -268,15 +268,14 @@ footer
         position: absolute
         top: -9999px
         left: -9999px
-        header
-            .hamburger-menu
-                visibility: visible
-                #hamburger, 
-                #cross
-                    border-top-left-radius: 10px
-                    background-color: $white
-                    #cross
-                        display: inline-block
+    header
+        .hamburger-menu
+            visibility: visible
+            #hamburger, 
+            #cross
+                border-top-left-radius: 10px
+                background-color: $white
+                display: inline-block
             .aboutme
                 .text-about
                     padding: 15px 25px
